--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,3 +33,6 @@ body {
   margin-top: 0.2em !important;
   color: white !important;
 }
+.mat-chip-list-wrapper {
+  margin: 0 -0.5em;
+}
